--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,14 @@
     <string name="attachment_summary_off">Only download attachments when manually requested</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="name">Name*</string>
+    <string name="email">Email*</string>
+    <string name="password">Password*</string>
+    <string name="confirm_password">Confirm Password*</string>
+    <string name="sign_up">SIGN UP</string>
+    <string name="children">Children</string>
+    <string name="parent">Parent</string>
+    <string name="top_bg_desc">Top background(arch)</string>
+    <string name="woman_desc">A woman in the right corner of the upper arch</string>
+    <string name="create_account">Create\naccount</string>
 </resources>
