--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -8,4 +8,7 @@
     <string name="children">Children</string>
     <string name="parent">Parent</string>
     <string name="create_account">Create\naccount</string>
+    <string name="login_to_your_account">Login to\nyour account</string>
+    <string name="login">LOGIN</string>
+    <string name="forget_password">Forget password?</string>
 </resources>
